# ai-workflows

./: README.md  temp.md
01-planning/: plantilla-brief-ia.md
project/.cursor/rules/: way_to_work.mdc
projects/code-discovery-agent/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
projects/code-discovery-agent/docs/: architecture.md  brief-agent.md  guardrials.md  manual-test-scenarios.md  plan-agent.md
projects/code-discovery-agent/src/: index.ts
projects/code-discovery-agent/tests/: env.test.ts  runAgent.test.ts  scaffold.test.ts  tools.test.ts  toolsContract.test.ts
projects/image-link/: .gitignore  README.md
projects/image-link/.cursor/: mcp.json
projects/image-link/01-planning/: draft-visualization-tool.mdc  image-link_brief.mdc  protocolo-review-ia.mdc
projects/image-link/backend/: README.md  pyproject.toml
projects/image-link/backend/backend/: config.py  main.py  supabase_client.py
projects/image-link/backend/backend/auth/: deps.py  router.py
projects/image-link/backend/backend/projects/: router.py  schemas.py
projects/image-link/backend/tests/: test_auth.py  test_health.py  test_projects.py
projects/image-link/docs/: ai-stack-components_capabilities.md  ai-stack.md  image-link-brief.md  protocolo-review.md
projects/image-link/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
projects/image-link/supabase/: config.toml  seed.sql
projects/langchain-agent-tools/: README.md  package-lock.json
resources/01-planning/: template-protocolo-review.md
(+49 files in other folders)
